--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -3,4 +3,4 @@ updates:
   - package-ecosystem: "maven"
     directory: "/"                  # Root directory where the main pom.xml is located
     schedule:
-      interval: "daily"  
+      interval: "weekly"  
